<resources>
    <string name="app_name">WizelineProject</string>
    <string name="book">Book:</string>
    <string name="volume">Volume:</string>
    <string name="high">High:</string>
    <string name="low">Low:</string>
    <string name="last">Last:</string>
    <string name="select_a_book">Select a book&#8230;</string>
    <string name="go">Go</string>
    <string name="amount">Amount</string>
</resources>